[package]
name = "test_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"]}
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"]}
